deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moxy-backend-deployment
  labels:
    app: moxy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moxy-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: moxy-backend
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: moxy-pool
      containers:
        - name: moxy-backend
          image: gcr.io/moxy-384018/moxy-backend:latest # This will be replaced by the unique tag
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
