service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moxy-backend-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: moxy-backend
